[tool.poetry]
name = "disc"
version = "0.1.0"
description = ""
authors = ["Tomás F. <contact@tomff.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.63.1"
"discord.py" = "^1.7.3"
click = "^8.0.4"
networkx = "^2.7.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[tool.poetry.scripts]
build = "disc.cli:build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
